--- a/html/app.html
+++ b/html/app.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link href="./css/style.css" rel="stylesheet" type="text/css">
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body class="android-ios">
         <iframe id="ionic-iframe" src="" frameborder="0"></iframe>
-        <script src="android-ios.js" type="text/javascript"></script>
+        <script src="lib.js" type="text/javascript"></script>
+        <script src="mobile.js" type="text/javascript"></script>
     </body>
 </html>
