--- a/html/app.html
+++ b/html/app.html
@@ -6,7 +6,7 @@
     </head>
     <body class="android-ios">
         <iframe id="ionic-iframe" src="" frameborder="0"></iframe>
-        <script src="lib.js" type="text/javascript"></script>
-        <script src="mobile.js" type="text/javascript"></script>
+        <script src="../javascript/lib.js" type="text/javascript"></script>
+        <script src="../javascript/mobile.js" type="text/javascript"></script>
     </body>
 </html>
