edit preference page style
add title and subtitle to be compliant with other preferences

--- a/html/mobilePreferences.html
+++ b/html/mobilePreferences.html
@@ -7,6 +7,8 @@
 <body>
 
 	<div class="panel wakanda-preferences">
+        <h1>Mobile Preferences</h1>
+        <h2>Ionic</h2>
 		<ul>
 			<li>
 				<label for="platformServeAddress" class="padding-left">Ionic platformServeAddress</label>
