--- a/html/android.html
+++ b/html/android.html
@@ -5,6 +5,9 @@
         <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body class="android-ios">
+    	<div class="btn-wrapper">
+    		<a class="btn btn-reload" title="Reload" id="reload"></a>
+    	</div>
         <iframe id="ionic-iframe" src="" frameborder="0"></iframe>
         <script src="../javascript/lib.js" type="text/javascript"></script>
         <script src="../javascript/mobile.js" type="text/javascript"></script>
