fix bug display page footer broken

--- a/html/webapp.html
+++ b/html/webapp.html
@@ -7,9 +7,11 @@
     <body class="android-ios">
     	<div class="btn-wrapper">
     		<a class="btn btn-reload" title="Reload" id="reload"></a>
-    	</div>    
+    	</div>
+      <div class="absolute-container">
         <iframe id="webapp-iframe" src="" frameborder="0"></iframe>
-        <script src="../javascript/lib.js" type="text/javascript"></script>
-        <script src="../javascript/webapp.js" type="text/javascript"></script>
+      </div>
+      <script src="../javascript/lib.js" type="text/javascript"></script>
+      <script src="../javascript/webapp.js" type="text/javascript"></script>
     </body>
 </html>
