code factorisation & externalize dependencies checking & display pending page in running webapp

--- a/html/chrome.html
+++ b/html/chrome.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
-        <iframe id="pending" src="" frameborder="0"></iframe>
-        <script src="../javascript/lib.js" type="text/javascript"></script>
-        <script src="../javascript/chrome.js" type="text/javascript"></script>
+    <body class="full-size">
+    	<div class="btn-wrapper"></div>
+        <div class="absolute-container">
+        <iframe id="wrapper-iframe" src="" frameborder="0"></iframe>
+      </div>
+      <script src="../javascript/lib.js" type="text/javascript"></script>
     </body>
 </html>
