--- a/html/pending.html
+++ b/html/pending.html
@@ -6,10 +6,12 @@
         <link href="../css/pending.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div id="pending">
-            <h3>
-                Ionic server starting <span class="one">.</span><span class="two">.</span><span class="three">.</span>
-            </h3>
+        <div class="container">
+            <h1>Please wait while Wakanda configures your app.</h1>
+            <p class="pending">
+                $ <span id="message"></span><span class="one">.</span><span class="two">.</span><span class="three">.</span>
+            </p>
+            <p class="info">Find more details in the console panel below.</p>
         </div>
     </body>
 </html>
